--- a/home/.nanorc
+++ b/home/.nanorc
@@ -10,7 +10,7 @@ set nowrap
 set smooth
 
 set tabsize 2
-#set tabstospaces
+set tabstospaces
 
 ## Color setup
 ## Format:
@@ -50,6 +50,21 @@ color blue "//.*"
 color blue start="/\*" end="\*/"
 color brightblue start="/\*\*" end="\*/"
 color brightgreen "[ 	]+$"
+
+## Groovy
+##
+syntax "groovy" "\.groovy$"
+color green "\<(boolean|byte|char|double|float|int|long|new|short|this|transient|void)\>"
+color red "\<(break|case|catch|continue|default|do|else|finally|for|if|return|switch|throw|try|while)\>"
+color cyan "\<(abstract|class|extends|final|implements|import|instanceof|interface|native|package|private|protected|public|static|strictfp|super|synchronized|throws|volatile)\>"
+color red ""[^\"]*""
+color yellow "\<(true|false|null)\>"
+color blue "//.*"
+color blue start="/\*" end="\*/"
+color brightblue start="/\*\*" end="\*/"
+color brightgreen "[ 	]+$"
+color green "[\{\}]"
+color cyan "([a-zA-Z])+:"
 
 ## Here is an example for your .nanorc
 ##
